--- a/administrator/RekapIzinPegawai.html
+++ b/administrator/RekapIzinPegawai.html
@@ -31,7 +31,7 @@
         <!-- Favicon -->
         <link rel="shortcut icon" type="image/x-icon" href="../assets/img/favicon.png" />
 
-        <title>Rekap Dinas SKPD | Absensi Online</title>
+        <title>Rekap Izin Pegawai | Absensi Online</title>
 
         <!-- vendor css -->
         <link href="../lib/@fortawesome/fontawesome-free/css/all.min.css" rel="stylesheet" />
@@ -101,7 +101,7 @@
                 </div>
                 <ul class="nav nav-aside">
                     <li class="nav-label">Dashboard</li>
-                    <li class="nav-item active">
+                    <li class="nav-item">
                         <a href="dashboard-harian.html" class="nav-link"><i data-feather="activity"></i> <span>Lap Utama Harian </span></a>
                     </li>
                     <li class="nav-item">
@@ -166,20 +166,20 @@
 
                     <!-- Pengajuan Ketidakhadiran -->
                     <li class="nav-label mg-t-25">Pengajuan Ketidakhadiran</li>
-                    <li class="nav-item with-sub active show">
+                    <li class="nav-item with-sub">
                         <a href="" class="nav-link"><i data-feather="map"></i> <span>Pengajuan Dinas</span></a>
                         <ul>
                             <li><a href="PengajuanDinas.html">Pengajuan</a></li>
-                            <li class="active"><a href="RekapDinasSKPD.html">Rekap Dinas SKPD</a></li>
+                            <li><a href="RekapDinasSKPD.html">Rekap Dinas SKPD</a></li>
                             <li><a href="RekapDinasPegawai.html">Rekap Dinas Pegawai</a></li>
                         </ul>
                     </li>
-                    <li class="nav-item with-sub">
+                    <li class="nav-item with-sub active show">
                         <a href="" class="nav-link"><i data-feather="alert-circle"></i> <span>Pengajuan Izin</span></a>
                         <ul>
                             <li><a href="PengajuanIzin.html">Pengajuan</a></li>
                             <li><a href="RekapIzinSKPD.html">Rekap Izin SKPD</a></li>
-                            <li><a href="RekapIzinPegawai.html">Rekap Izin Pegawai</a></li>
+                            <li class="active"><a href="RekapIzinPegawai.html">Rekap Izin Pegawai</a></li>
                         </ul>
                     </li>
                     <li class="nav-item with-sub">
@@ -265,10 +265,10 @@
                             <nav aria-label="breadcrumb">
                                 <ol class="breadcrumb breadcrumb-style1 mg-b-10">
                                     <li class="breadcrumb-item"><a href="#">Pengajuan Ketidakhadiran</a></li>
-                                    <li class="breadcrumb-item active" aria-current="page">Rekap Dinas SKPD</li>
+                                    <li class="breadcrumb-item active" aria-current="page">Rekap Izin Pegawai</li>
                                 </ol>
                             </nav>
-                            <h4 class="mg-b-0 tx-spacing--1">Rekap Dinas SKPD</h4>
+                            <h4 class="mg-b-0 tx-spacing--1">Rekap Izin Pegawai</h4>
                         </div>
                         <div class="d-none d-md-block">
                             <div class="btn-group" role="group" aria-label="Basic example"></div>
@@ -276,7 +276,7 @@
                     </div>             
                     <div class="row row-xs">
                         <div class="col-sm-12 col-lg-12">
-                            <div data-label="List Rekap Dinas SKPD" class="df-example demo-table">
+                            <div data-label="List Rekap Izin Pegawai" class="df-example demo-table">
                                 <div class="accordion mg-b-20" id="accordionExample">
                                     <div class="accordion-item">
                                         <h2 class="accordion-header">
@@ -287,23 +287,52 @@
                                         <div id="collapseOne" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
                                             <div class="accordion-body">
                                                 <div class="row row-sm">
-                                                    <div class="col-lg-3">
+                                                    <div class="col-lg-6">                                        
                                                         <div class="form-group">
-                                                            <label for="formGroup" class="d-block">Tipe Dinas</label>
+                                                            <label for="formGroup" class="d-block">SKPD</label>
                                                             <select class="form-select select2">
-                                                                <option label="Pilih Tipe Dinas"></option>
-                                                                <option value="Dinas Luar Full">Dinas Luar Full</option>
-                                                                <option value="Dinas Luar, Tidak Absen Masuk">Dinas Luar, Tidak Absen Masuk</option>
-                                                                <option value="Dinas Luar, Tidak Absen Pulang">Dinas Luar, Tidak Absen Pulang</option>
-                                                                <option value="Tugas Lain Full">Tugas Lain Full</option>
-                                                                <option value="Tugas Lain, Tidak Absen Masuk">Tugas Lain, Tidak Absen Masuk</option>
-                                                                <option value="Tugas Lain, Tidak Absen Pulang">Tugas Lain, Tidak Absen Pulang</option>
-                                                                <option value="Tugas Lain, Apel Gabungan">Tugas Lain, Apel Gabungan</option>
-                                                                <option value="Tugas Lain, Gotong Royong">Tugas Lain, Gotong Royong</option>
+                                                                <option label="Pilih SKPD"></option>
+                                                                <option value="Dinas">Dinas Kantor</option>
+                                                                <option value="WFH">Work From Home (WFH)</option>
+                                                                <option value="WFA">Work From Anyware (WFA)</option>
+                                                            </select>
+                                                        </div>
+                                                    </div>
+                                                    <div class="col-lg-6">
+                                                        <div class="form-group">
+                                                            <label for="formGroup" class="d-block">Unit Kerja</label>
+                                                            <select class="form-select select2">
+                                                                <option label="Pilih Unit Kerja"></option>
+                                                                <option value="Dinas">Dinas Kantor</option>
+                                                                <option value="WFH">Work From Home (WFH)</option>
+                                                                <option value="WFA">Work From Anyware (WFA)</option>
                                                             </select>
                                                         </div>
                                                     </div>
                                                     <div class="col-lg-2">
+                                                        <div class="form-group">
+                                                            <label for="formGroup" class="d-block">Jenis Pegawai</label>
+                                                            <select class="form-control select2">
+                                                                <option label="Pilih Jenis Pegawai"></option>
+                                                                <option value="PNS">PNS</option>
+                                                                <option value="PPPK Penuh Waktu">PPPK Penuh Waktu</option>
+                                                                <option value="PPPK Paruh Waktu">PPPK Paruh Waktu</option>
+                                                                <option value="Non ASN">Non ASN</option>
+                                                            </select>
+                                                        </div>
+                                                    </div>
+                                                    <div class="col-lg-3">
+                                                        <div class="form-group">
+                                                            <label for="formGroup" class="d-block">Tipe Izin</label>
+                                                            <select class="form-select select2">
+                                                                <option label="Pilih Tipe Izin"></option>
+                                                                <option value="Izin Full">Izin Full</option>
+                                                                <option value="Izin, Terlambat">Izin, Terlambat</option>
+                                                                <option value="Izin, Pulang Sebelum Waktu">Izin, Pulang Sebelum Waktu</option>
+                                                            </select>
+                                                        </div>
+                                                    </div>
+                                                    <div class="col-lg-3">
                                                         <div class="form-group">
                                                             <label for="formGroup" class="d-block">Bulan</label>
                                                             <select class="form-control select2">
@@ -327,7 +356,7 @@
                                                         <div class="form-group">
                                                             <label for="formGroup" class="d-block">&nbsp;</label>
                                                             <button class="btn btn-sm pd-x-15 btn-primary btn-uppercase"><i data-feather="refresh-cw" class="wd-10 mg-r-5"></i> Filter</button>
-                                                            <button class="btn btn-sm pd-x-15 btn-outline-success btn-uppercase"><i data-feather="download" class="wd-10 mg-r-5"></i> Export</button>
+                                                            <button class="btn btn-sm pd-x-15 btn-danger btn-uppercase disabled" id="HapusAll" data-bs-toggle="modal" data-bs-target="#ModalHapus" aria-disabled="true"><i data-feather="trash" class="wd-10 mg-r-5"></i> Hapus Data</button>                                   
                                                         </div>
                                                     </div>
                                                 </div>
@@ -336,48 +365,40 @@
                                     </div>
                                 </div>                         
                                 <!-- row -->
-                                <table id="datatables" class="table table-hover" style="width: 100%;">
-                                    <thead class="thead-primary">
-                                        <tr>
-                                            <th rowspan="2">Rank</th>
-                                            <th rowspan="2" class="text-nowrap">Nama SKPD</th>
-                                            <th colspan="4" class="text-center">Dinas Luar</th>
-                                            <th colspan="6" class="text-center">Tugas Lain</th>
-                                            <th rowspan="2">Persentase</th>
-                                        </tr>
-                                        <tr>
-                                            <th>Dinas Luar Full</th>
-                                            <th>Dinas Luar, Tidak Absen Masuk</th>
-                                            <th>Dinas Luar, Tidak Absen Pulang</th>
-                                            <th>Total</th>
-                                            <th>Tugas Lain Full</th>
-                                            <th>Tugas Lain, Tidak Absen Masuk</th>
-                                            <th>Tugas Lain, Tidak Absen Pulang</th>
-                                            <th>Tugas Lain, Apel Gabungan</th>
-                                            <th>Tugas Lain, Gotong Royong</th>
-                                            <th>Total</th>
-                                        </tr>
-                                    </thead>
-                                    <tbody>
-                                        <tr>
-                                            <td>1</td>
-                                            <td>
-                                                <h6 class="tx-13 mg-b-2 tx-primary">Dinas Pendidikan</h6>
-                                            </td>
-                                            <td class="text-end">10</td>
-                                            <td class="text-end">10</td>
-                                            <td class="text-end">10</td>
-                                            <td class="text-end">10</td>
-                                            <td class="text-end">10</td>
-                                            <td class="text-end">10</td>
-                                            <td class="text-end">10</td>
-                                            <td class="text-end">10</td>
-                                            <td class="text-end">10</td>
-                                            <td class="text-end">10</td>
-                                            <td class="text-end">10%</td>
-                                        </tr>
-                                    </tbody>
-                                </table>
+                                <div class="table-responsive">
+                                    <table id="datatables" class="table table-hover table-bordered" style="width: 100%;">
+                                        <thead class="thead-primary">
+                                            <tr>
+                                                <th rowspan="2">Nama Pegawai</th>
+                                                <th rowspan="2">Jenis Pegawai</th>
+                                                <th rowspan="2">Jabatan</th>
+                                                <th colspan="4" class="text-center">Izin</th>
+                                                <th rowspan="2">Persentase</th>
+                                            </tr>
+                                            <tr>
+                                                <th>Izin Full</th>
+                                                <th>Izin, Terlambat</th>
+                                                <th>Izin, Pulang Sebelum Waktu</th>
+                                                <th>Total</th>
+                                            </tr>
+                                        </thead>
+                                        <tbody>
+                                            <tr>
+                                                <td>
+                                                    <h6 class="tx-13 mg-b-2 tx-primary">Katherine Lumaad</h6>
+                                                    <p class="tx-12 mg-b-10">196708142001121002</p>
+                                                </td>
+                                                <td class="text-start">PNS</td>
+                                                <td class="text-start">Analis Sumber Daya Manusia Aparatur Ahli Muda</td>
+                                                <td class="text-end">10</td>
+                                                <td class="text-end">10</td>
+                                                <td class="text-end">10</td>
+                                                <td class="text-end">10</td>
+                                                <td class="text-end">10%</td>
+                                            </tr>
+                                        </tbody>
+                                    </table>
+                                </div>
                             </div>
                             <!-- df-example -->
                         </div>
