--- a/administrator/dashboard-bulanan.html
+++ b/administrator/dashboard-bulanan.html
@@ -255,140 +255,142 @@
               <h6 class="mg-b-0"></h6>
               <div class="d-flex align-items-center tx-16">
                 <div class="btn-group" role="group" aria-label="Basic example">
-                  <button class="btn btn-sm pd-x-15 btn-outline-success btn-uppercase"><i data-feather="file-text" class="wd-10 mg-r-2"></i> Export</button>
+                  <button class="btn btn-sm pd-x-15 btn-outline-success btn-uppercase"><i data-feather="download" class="wd-10 mg-r-2"></i> Export</button>
                 </div>
               </div>
             </div>
             <div class="col">
               <div class="card">
                 <div data-label="Rekap Kehadiran Bulanan" class="df-example demo-table">
-                  <table id="" class="table table-hover table-bordered" style="width: 100%;">
-                    <thead class="thead-primary">
-                      <tr>
-                        <th rowspan="2" class="text-center">Bulan Ke-</th>
-                        <th colspan="3" class="text-center">Kehadiran</th>
-                        <th colspan="5" class="text-center">Absen Kantor</th>
-                      </tr>
-                      <tr>
-                        <th class="text-center">Kantor</th>
-                        <th class="text-center">WFH/WFA</th>
-                        <th class="text-center">Alpha</th>
-                        <th class="text-center">DL/Tugas Lain</th>
-                        <th class="text-center">Izin/Sakit</th>
-                        <th class="text-center">Cuti</th>
-                      </tr>
-                    </thead>
-                    <tbody>
-                      <tr>
-                        <td class="text-center">1</td>
-                        <td class="text-end">5,628</td>
-                        <td class="text-end">25.60%</td>
-                        <td class="text-end">1.92</td>
-                        <td class="text-end">190,92</td>
-                        <td class="text-end">340,103</td>
-                        <td class="text-end">$2.65M</td>
-                      </tr>
-                      <tr>
-                        <td class="text-center">2</td>
-                        <td class="text-end">5,628</td>
-                        <td class="text-end">25.60%</td>
-                        <td class="text-end">1.92</td>
-                        <td class="text-end">190,92</td>
-                        <td class="text-end">340,103</td>
-                        <td class="text-end">$2.65M</td>
-                      </tr>
-                      <tr>
-                        <td class="text-center">3</td>
-                        <td class="text-end">5,628</td>
-                        <td class="text-end">25.60%</td>
-                        <td class="text-end">1.92</td>
-                        <td class="text-end">190,92</td>
-                        <td class="text-end">340,103</td>
-                        <td class="text-end">$2.65M</td>
-                      </tr>
-                      <tr>
-                        <td class="text-center">4</td>
-                        <td class="text-end">5,628</td>
-                        <td class="text-end">25.60%</td>
-                        <td class="text-end">1.92</td>
-                        <td class="text-end">190,92</td>
-                        <td class="text-end">340,103</td>
-                        <td class="text-end">$2.65M</td>
-                      </tr>
-                      <tr>
-                        <td class="text-center">5</td>
-                        <td class="text-end">5,628</td>
-                        <td class="text-end">25.60%</td>
-                        <td class="text-end">1.92</td>
-                        <td class="text-end">190,92</td>
-                        <td class="text-end">340,103</td>
-                        <td class="text-end">$2.65M</td>
-                      </tr>
-                      <tr>
-                        <td class="text-center">6</td>
-                        <td class="text-end">5,628</td>
-                        <td class="text-end">25.60%</td>
-                        <td class="text-end">1.92</td>
-                        <td class="text-end">190,92</td>
-                        <td class="text-end">340,103</td>
-                        <td class="text-end">$2.65M</td>
-                      </tr>
-                      <tr>
-                        <td class="text-center">7</td>
-                        <td class="text-end">5,628</td>
-                        <td class="text-end">25.60%</td>
-                        <td class="text-end">1.92</td>
-                        <td class="text-end">190,92</td>
-                        <td class="text-end">340,103</td>
-                        <td class="text-end">$2.65M</td>
-                      </tr>
-                      <tr>
-                        <td class="text-center">8</td>
-                        <td class="text-end">5,628</td>
-                        <td class="text-end">25.60%</td>
-                        <td class="text-end">1.92</td>
-                        <td class="text-end">190,92</td>
-                        <td class="text-end">340,103</td>
-                        <td class="text-end">$2.65M</td>
-                      </tr>
-                      <tr>
-                        <td class="text-center">9</td>
-                        <td class="text-end">5,628</td>
-                        <td class="text-end">25.60%</td>
-                        <td class="text-end">1.92</td>
-                        <td class="text-end">190,92</td>
-                        <td class="text-end">340,103</td>
-                        <td class="text-end">$2.65M</td>
-                      </tr>
-                      <tr>
-                        <td class="text-center">10</td>
-                        <td class="text-end">5,628</td>
-                        <td class="text-end">25.60%</td>
-                        <td class="text-end">1.92</td>
-                        <td class="text-end">190,92</td>
-                        <td class="text-end">340,103</td>
-                        <td class="text-end">$2.65M</td>
-                      </tr>
-                      <tr>
-                        <td class="text-center">11</td>
-                        <td class="text-end">5,628</td>
-                        <td class="text-end">25.60%</td>
-                        <td class="text-end">1.92</td>
-                        <td class="text-end">190,92</td>
-                        <td class="text-end">340,103</td>
-                        <td class="text-end">$2.65M</td>
-                      </tr>
-                      <tr>
-                        <td class="text-center">12</td>
-                        <td class="text-end">5,628</td>
-                        <td class="text-end">25.60%</td>
-                        <td class="text-end">1.92</td>
-                        <td class="text-end">190,92</td>
-                        <td class="text-end">340,103</td>
-                        <td class="text-end">$2.65M</td>
-                      </tr>
-                    </tbody>
-                  </table>
+                  <div class="table-responsive">
+                    <table id="" class="table table-hover table-bordered" style="width: 100%;">
+                      <thead class="thead-primary">
+                        <tr>
+                          <th rowspan="2" class="text-center">Bulan Ke-</th>
+                          <th colspan="3" class="text-center">Kehadiran</th>
+                          <th colspan="5" class="text-center">Absen Kantor</th>
+                        </tr>
+                        <tr>
+                          <th class="text-center">Kantor</th>
+                          <th class="text-center">WFH/WFA</th>
+                          <th class="text-center">Alpha</th>
+                          <th class="text-center">DL/Tugas Lain</th>
+                          <th class="text-center">Izin/Sakit</th>
+                          <th class="text-center">Cuti</th>
+                        </tr>
+                      </thead>
+                      <tbody>
+                        <tr>
+                          <td class="text-center">1</td>
+                          <td class="text-end">5,628</td>
+                          <td class="text-end">25.60%</td>
+                          <td class="text-end">1.92</td>
+                          <td class="text-end">190,92</td>
+                          <td class="text-end">340,103</td>
+                          <td class="text-end">$2.65M</td>
+                        </tr>
+                        <tr>
+                          <td class="text-center">2</td>
+                          <td class="text-end">5,628</td>
+                          <td class="text-end">25.60%</td>
+                          <td class="text-end">1.92</td>
+                          <td class="text-end">190,92</td>
+                          <td class="text-end">340,103</td>
+                          <td class="text-end">$2.65M</td>
+                        </tr>
+                        <tr>
+                          <td class="text-center">3</td>
+                          <td class="text-end">5,628</td>
+                          <td class="text-end">25.60%</td>
+                          <td class="text-end">1.92</td>
+                          <td class="text-end">190,92</td>
+                          <td class="text-end">340,103</td>
+                          <td class="text-end">$2.65M</td>
+                        </tr>
+                        <tr>
+                          <td class="text-center">4</td>
+                          <td class="text-end">5,628</td>
+                          <td class="text-end">25.60%</td>
+                          <td class="text-end">1.92</td>
+                          <td class="text-end">190,92</td>
+                          <td class="text-end">340,103</td>
+                          <td class="text-end">$2.65M</td>
+                        </tr>
+                        <tr>
+                          <td class="text-center">5</td>
+                          <td class="text-end">5,628</td>
+                          <td class="text-end">25.60%</td>
+                          <td class="text-end">1.92</td>
+                          <td class="text-end">190,92</td>
+                          <td class="text-end">340,103</td>
+                          <td class="text-end">$2.65M</td>
+                        </tr>
+                        <tr>
+                          <td class="text-center">6</td>
+                          <td class="text-end">5,628</td>
+                          <td class="text-end">25.60%</td>
+                          <td class="text-end">1.92</td>
+                          <td class="text-end">190,92</td>
+                          <td class="text-end">340,103</td>
+                          <td class="text-end">$2.65M</td>
+                        </tr>
+                        <tr>
+                          <td class="text-center">7</td>
+                          <td class="text-end">5,628</td>
+                          <td class="text-end">25.60%</td>
+                          <td class="text-end">1.92</td>
+                          <td class="text-end">190,92</td>
+                          <td class="text-end">340,103</td>
+                          <td class="text-end">$2.65M</td>
+                        </tr>
+                        <tr>
+                          <td class="text-center">8</td>
+                          <td class="text-end">5,628</td>
+                          <td class="text-end">25.60%</td>
+                          <td class="text-end">1.92</td>
+                          <td class="text-end">190,92</td>
+                          <td class="text-end">340,103</td>
+                          <td class="text-end">$2.65M</td>
+                        </tr>
+                        <tr>
+                          <td class="text-center">9</td>
+                          <td class="text-end">5,628</td>
+                          <td class="text-end">25.60%</td>
+                          <td class="text-end">1.92</td>
+                          <td class="text-end">190,92</td>
+                          <td class="text-end">340,103</td>
+                          <td class="text-end">$2.65M</td>
+                        </tr>
+                        <tr>
+                          <td class="text-center">10</td>
+                          <td class="text-end">5,628</td>
+                          <td class="text-end">25.60%</td>
+                          <td class="text-end">1.92</td>
+                          <td class="text-end">190,92</td>
+                          <td class="text-end">340,103</td>
+                          <td class="text-end">$2.65M</td>
+                        </tr>
+                        <tr>
+                          <td class="text-center">11</td>
+                          <td class="text-end">5,628</td>
+                          <td class="text-end">25.60%</td>
+                          <td class="text-end">1.92</td>
+                          <td class="text-end">190,92</td>
+                          <td class="text-end">340,103</td>
+                          <td class="text-end">$2.65M</td>
+                        </tr>
+                        <tr>
+                          <td class="text-center">12</td>
+                          <td class="text-end">5,628</td>
+                          <td class="text-end">25.60%</td>
+                          <td class="text-end">1.92</td>
+                          <td class="text-end">190,92</td>
+                          <td class="text-end">340,103</td>
+                          <td class="text-end">$2.65M</td>
+                        </tr>
+                      </tbody>
+                    </table>
+                  </div>
                 </div>
                 <!-- df-example -->
               </div>
